# mobstiq

./: LICENSE  Makefile  README.md  setup.cfg
src/mobstiq/: __main__.py  app.py  main.py
src/mobstiq/static/: index.html  mobstiq.bare  mobstiq.smd
src/mobstiq/static/games/: checkers.bare  ticTacToe.bare
src/mobstiq/static/test/: index.html  runTests.bare  testMobstiq.bare
src/tests/: test_app.py  test_main.py
