[metadata]
name = mobstiq
version = 0.9.0
url = https://github.com/craigahobbs/mobstiq
author = Craig A. Hobbs
author_email = craigahobbs@gmail.com
license = MIT
description = mobstiq
long_description = file:README.md
long_description_content_type = text/markdown
keywords = mobstiq
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Utilities

[options]
packages = mobstiq
package_dir =
    = src
install_requires =
    chisel >= 1.9.0
    waitress >= 3.0.0

[options.entry_points]
console_scripts =
    mobstiq = mobstiq.main:main

[options.package_data]
game_center =
    static/*.bare
    static/*.html
    static/*.smd
    static/games/*.bare
